--- a/src/app/home/tab1.page.html
+++ b/src/app/home/tab1.page.html
@@ -5,7 +5,7 @@
 >
   <ion-toolbar color="transparent">
     <ion-buttons slot="start">
-      <ion-button color="dark" size="large" strong="true" (click)="test()">
+      <ion-button color="dark" size="large" strong="true">
         <h1 class="ion-no-margin" style="font-family: 'Monoton', sans-serif">
           Paisa
         </h1>
