--- a/src/app/smsFeature/tab3.page.html
+++ b/src/app/smsFeature/tab3.page.html
@@ -141,7 +141,15 @@
     <ion-row>
       <ion-col class="ion-align-items-center">
         <h1>We don't have the access to the your SMS</h1>
-        <button (click)="checkPermission()">Request</button>
+        <button
+          color="success"
+          fill="outline"
+          shape="round"
+          size="large"
+          (click)="checkPermission()"
+        >
+          Request Permission
+        </button>
       </ion-col>
     </ion-row>
   </ion-grid>
