--- a/src/app/signin/signin.page.html
+++ b/src/app/signin/signin.page.html
@@ -1,64 +1,63 @@
-<ion-content [fullscreen]="true">
-  <ion-grid>
-    <ion-row>
-      <ion-col class="ion-padding">
-        <ion-img
-          src="https://cdn-icons-png.flaticon.com/512/16382/16382732.png "
-        ></ion-img>
+<ion-content [fullscreen]="true" class="" style="background: #000">
+  <ion-grid class="ion-no-padding" style="height: 100%">
+    <ion-row style="height: 35%">
+      <ion-col>
+        <ion-img src="../../assets/sign.png"></ion-img>
       </ion-col>
     </ion-row>
-    <ion-row>
-      <ion-col
-        class="ion-align-self-center ion-padding-horizontal ion-margin-top"
-      >
-        <form [formGroup]="signinForm">
+    <ion-row class="bg">
+      <ion-col class="ion-align-self-center glass" style="height: 100%">
+        <h1 class="ion-text-center">
+          Welcome Back!
+          <p
+            class="ion-no-padding"
+            style="font-size: 15px; font-weight: 400; font-style: italic"
+          >
+            It's been a long time.
+          </p>
+        </h1>
+        <form [formGroup]="signinForm" class="ion-text-center">
           <ion-input
-            label="Email"
-            label-placement="floating"
+            placeholder="Email"
             fill="outline"
-            placeholder="Enter Email"
-            [clearInput]="true"
             shape="round"
             formControlName="email"
           ></ion-input>
-          <br />
           <ion-input
-            label="Password"
-            label-placement="floating"
+            placeholder="Password"
             fill="outline"
-            placeholder="Enter Password"
-            type="password"
             shape="round"
+            type="password"
             formControlName="password"
           >
-            <!-- <ion-input-password-toggle
-              slot="end"
-              hide-icon="true"
-            ></ion-input-password-toggle> -->
           </ion-input>
+          <ion-button
+            class="ion-margin-vertical"
+            color="dark"
+            fill="solid"
+            expand="full"
+            shape="round"
+            size="large"
+            (click)="signin()"
+            >Sign In</ion-button
+          >
+          <p routerLink="/signup" style="font-weight: 800">New User ?</p>
         </form>
       </ion-col>
     </ion-row>
-
+    <!-- 
     <ion-row>
       <ion-col offset="4">
-        <ion-button
-          color="success"
-          fill="outline"
-          shape="round"
-          size="large"
-          (click)="signin()"
-          >Sign In</ion-button
-        >
+        
       </ion-col>
     </ion-row>
 
     <ion-row>
       <ion-col class="ion-text-center">
         <!-- <a routerLink="/signup">Forgot password ?</a>
-          <br /> -->
-        <a routerLink="/signup">New User ?</a>
+          <br /> 
+        
       </ion-col>
-    </ion-row>
+    </ion-row> -->
   </ion-grid>
 </ion-content>
