--- a/src/app/home/tab1.page.scss
+++ b/src/app/home/tab1.page.scss
@@ -45,7 +45,7 @@
 
 .amount-text {
   margin-top: 5px;
-  font-family: "Railway", sans-serif;
+  font-family: "SUSE", sans-serif;
 }
 
 ion-thumbnail {
@@ -53,7 +53,7 @@ ion-thumbnail {
   margin: 0 auto 5px auto;
 }
 
-ion-thumbnail ~ b {
+ion-thumbnail~b {
   font-size: 14px;
   font-weight: 900;
 }
@@ -63,6 +63,7 @@ ion-thumbnail ~ b {
   width: 60px;
   position: relative;
 }
+
 .userlogo::before {
   content: "";
   position: absolute;
@@ -73,4 +74,20 @@ ion-thumbnail ~ b {
   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: xor;
   mask-composite: exclude;
+}
+
+.sub-title {
+  font-size: x-large;
+  font-family: "Long Cang", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.wrap-extra-text {
+  // font-family: 'Monoton', sans-serif;
+  overflow: hidden;
+  text-overflow: ellipsis !important;
+  white-space: nowrap;
+  max-width: 40%;
+  text-align: end;
 }
